--- a/env.yml
+++ b/env.yml
@@ -2,22 +2,18 @@ name: glmhmm
 channels:
   - defaults
 dependencies:
-  - ca-certificates=2021.5.25=hecd8cb5_1
-  - certifi=2021.5.30=py37hecd8cb5_0
-  - libcxx=10.0.0=1
-  - libedit=3.1.20210216=h9ed2024_1
-  - libffi=3.2.1=h0a44026_1007
-  - ncurses=6.2=h0a44026_1
-  - openssl=1.1.1k=h9ed2024_0
-  - pip=21.1.2=py37hecd8cb5_0
-  - python=3.7.3=h359304d_0
-  - readline=7.0=h1de35cc_5
-  - setuptools=52.0.0=py37hecd8cb5_0
-  - sqlite=3.33.0=hffcf06c_0
-  - tk=8.6.10=hb0a8c7a_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - xz=5.2.5=h1de35cc_0
-  - zlib=1.2.11=h1de35cc_3
+  - ca-certificates=2021.5.25
+  - certifi=2021.5.30
+  - libffi=3.2.1
+  - openssl=1.1.1k
+  - pip=21.1.2
+  - python=3.7.3
+  - setuptools=52.0.0
+  - sqlite=3.33.0
+  - tk=8.6.10
+  - wheel=0.36.2
+  - xz=5.2.5
+  - zlib=1.2.11
   - pip:
     - absl-py==0.12.0
     - appnope==0.1.2
@@ -40,7 +36,6 @@ dependencies:
     - ipython-genutils==0.2.0
     - ipywidgets==7.6.3
     - jax==0.2.14
-    - jaxlib==0.1.67
     - jedi==0.18.0
     - jinja2==3.0.1
     - jsonschema==3.2.0
@@ -75,6 +70,7 @@ dependencies:
     - pyparsing==2.4.7
     - pyrsistent==0.17.3
     - python-dateutil==2.8.1
+    - pyreadline==2.1
     - pyzmq==22.1.0
     - qtconsole==5.1.0
     - qtpy==1.9.0
